<resources>
    <string name="app_name">SMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to the Alert Dialog -->
    <string name="notification_listener_service">"Notification Listener Service"</string>
    <string name="notification_listener_service_explanation">"For the the app. to work you need to enable the Notification Listener Service. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="active_notification_count_zero">No active notification</string>
    <string name="block_contacts">Block Contacts</string>
    <string name="message">Message</string>
    <string name="button">Button</string>
    <string name="butto">+</string>
    <string name="minus">-</string>
    <string name="show">show</string>
    <string name="next">Next</string>
    <string name="voice">Voice</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="blocked_numbers">BLOCKED NUMBERS</string>
    <plurals name="active_notification_count_nonzero">
        <item quantity="one">%d active notification</item>
        <item quantity="other">%d active notifications</item>
    </plurals>
</resources>
